syntax = "proto3";

option java_multiple_files = true;
option java_package = "app.grpc.server.gen.task";
option java_outer_classname = "TaskServiceProto";
option go_package = "task";

package messages;

import "google/api/annotations.proto";

service TaskService {
  rpc GetTaskService (TaskInbound) returns (TaskOutbound) {
    option (google.api.http) = {
      get: "/v1/task"
    };
  }
}

message TaskInbound {
  uint32 task_id = 1;
}

message TaskOutbound {
  uint32 task_id = 1;
  string title = 2;
}